--- a/CSS/Propiedades_CSS_Parte1/css/HojaEstilo.css
+++ b/CSS/Propiedades_CSS_Parte1/css/HojaEstilo.css
@@ -37,11 +37,40 @@ h2{
 }
 
 /*Fondo*/
-body{
+/*body{
     background-color: peachpuff;
-    background-image: url(../../../HTML/6_Imagenes/img/img2.jfif);  /*Ponemos una imagen de fondo*/
-    background-repeat: no-repeat;    /*Repetimos una imagen, repetir una imagen en eje x etc , repeat, no-repeat,repeat-x ..*/
-    background-position: center bottom;  /*Permite ubicar el fondo en un lugar relativo*/
-    background-position: 20% 50%;
-    background-attachment: scroll; /*scroll por si la pagina tiene scroll y se quede donde tiene que estar y fixed para que el fondo siempre este en su sitio aunque la pagina suba o baje*/
+    background-image: url(../../../HTML/6_Imagenes/img/css.JPG);  /*Ponemos una imagen de fondo*/
+/*    background-repeat: no-repeat;    /*Repetimos una imagen, repetir una imagen en eje x etc , repeat, no-repeat,repeat-x ..*/
+/*    background-position: center bottom;  /*Permite ubicar el fondo en un lugar relativo*/
+/*    background-position: 20% 50%;
+/*    background-attachment: scroll; /*scroll por si la pagina tiene scroll y se quede donde tiene que estar y fixed para que el fondo siempre este en su sitio aunque la pagina suba o baje*/
+/*}
+
+
+/*Cuadro*/
+#cuadro{
+    width: 200px;/*define el ancho del documento*/
+    height: 200px;/*define el alto del elemento*/
+    background: lime;
+    
+    overflow: auto;/*hace que el contenido del div se ajuste a la altura y ancho, en caso que sobrepase el tamaño establecido se pondrá en modo scroll*/
+
+    
+    border-style: solid;
+    border-width: 10px;
+    border-color: red;
+    border-bottom-color:blue ;
+
+    padding-top: 20px;  /*margen interno*/
+    padding-left: 5px;
+    padding-bottom: 10px;
+    padding-right: 50px;
+
+    margin-top: 40px; /*margen exterior*/
+    margin-right: 0px;
+    margin-bottom: 70px;
+    margin-left: 50px;
+    
+
+
 }
